--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -18,4 +18,9 @@
     color: #ff7f32;
     background-color: white;
   }
+
+  &--m-vertical {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 }
