--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -12,17 +12,17 @@
     transform: translateY(-50%);
     left: 0;
     width: 100%;
+    text-align: center;
 
-    &--right {
-      text-align: right;
-      /* transform: translateX(-50%) translateY(-50%); */
+    @mixin atMedium {
+      text-align: left;
     }
   }
 
   &__title {
     font-weight: 500;
     margin: 0;
-    font-size: 2.4rem;
+    font-size: 2.625rem;
 
     @mixin atSmall {
       font-size: 4.25rem;
@@ -31,7 +31,7 @@
 
   &__subtitle {
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 2.625rem;
     margin: 0;
     margin-bottom: 3rem;
 
