--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,5 +1,5 @@
 .page-section {
-  padding: 1.2rem 0;
+  padding: 4.5rem 0;
   position: relative;
 
   @mixin atMedium {
@@ -11,11 +11,15 @@
     z-index: -3;
     width: 100%;
     /* transform: translateX(-50%); */
-    height: 375px;
     margin: -150px 0;
-    border-radius: 0 0 70% 70%;
+    height: 500px;
     background-color: #ff7f32;
     overflow: hidden;
+
+    @mixin atMedium {
+      height: 400px;
+      border-radius: 0 0 70% 70%;
+    }
   }
 
   &--no-t-padding {
